--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.3",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
